<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_settings_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/preferences"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dark_white"
            android:textColorLink="@android:color/white"
            android:textSize="10pt"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:checked="true"
                android:drawingCacheQuality="auto"
                android:textOff="@string/nothing"
                android:textOn="@string/nothing" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/enable_tracking"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_white"
                android:textSize="10pt"
                android:textStyle="bold" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:text="@string/sms_reporting"
            android:textColor="@color/dark_white"
            android:textSize="10pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/sms_alert_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:text="@string/hint_sms_alert"
                android:textColor="@color/dark_white"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/btn_sms_alert_change"
                style="?android:attr/buttonStyleSmall"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="right"
                android:background="@drawable/ic_action_edit"
                android:layout_width="45dp"
                android:layout_height="45dp" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/email_reporting"
            android:textColor="@color/dark_white"
            android:textSize="10pt" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/email_alert_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/dark_white"
                android:text="@string/hint_email_alert"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/btn_email_alert_change"
                style="?android:attr/buttonStyleSmall"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="right"
                android:background="@drawable/ic_action_edit"
                android:layout_width="45dp"
                android:layout_height="45dp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>